# diffogus

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
diffogus/: Cargo.toml
diffogus/src/: diff.rs  json_value.rs  lib.rs
diffogus/tests/: derive.rs  diff.rs  json_value.rs  serde.rs
diffogus_derive/: Cargo.toml
diffogus_derive/src/: lib.rs
